# data-sekolah-scrape

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  scrape.py
data/: example.csv
